--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -24,6 +24,10 @@
     padding: 1.5rem 1rem;
 }
 
+.moveLeft{
+    padding: 0;
+}
+
 @media screen and (max-width: 600px) {
     .jumbotron .display-4 {
         font-size: 2.25rem;
