--- a/src/styles/CreatePost.css
+++ b/src/styles/CreatePost.css
@@ -1,36 +1,27 @@
 .create-post-wrapper {
-  display: block;
-  margin: 20px;
+ 
   padding: 15px;
   background-color: white;
   border-radius: 7px;
   box-shadow: 1.5px 3px 3px 3px rgba(0, 0, 0, 0.15);
   color: #402366;
 }
-.create-post-wrapper .cont {
-  width: 95%;
-  margin: auto;
-}
-.create-post-wrapper .cont .info-wrapper {
-  display: flex;
-  margin-bottom: 7px;
-}
-.create-post-wrapper .cont .info-wrapper .info {
-  flex: 1;
-}
-.create-post-wrapper .cont .info-wrapper .info .name {
-  font-size: 23px;
+
+
+.create-post-wrapper  .name {
+  font-size: small;
   font-weight: 700;
 }
-.create-post-wrapper .cont .info-wrapper .info .loc {
-  font-size: 14px;
+.create-post-wrapper .info, .create-post-wrapper .loc {
+  font-size:smaller;
   font-weight: 700;
 }
-.create-post-wrapper .cont .info-wrapper .info .img-container {
+.create-post-wrapper .img-container {
   width: 85px;
   display: flex;
 }
-.create-post-wrapper .cont .info-wrapper .info .img-container img {
+
+.create-post-wrapper .img-container img {
   border: 3.75px solid #7E22FF;
   border-radius: 100%;
   margin: auto;
@@ -38,26 +29,27 @@
   height: 75px;
   object-fit: cover;
 }
-.create-post-wrapper .cont .info-wrapper .btn {
+.create-events-btn {
   border-radius: 0;
   padding: 5px 10px;
   display: block;
-  margin-left: 15px;
-  margin-top: 15px;
+ 
   background-color: #F8F2FF;
   color: #402366;
-  font-size: 17px;
+  
   font-weight: 700;
   text-align: center;
   transition: background-color 0.3s linear;
 }
-.create-post-wrapper .cont .info-wrapper .btn:hover, .create-post-wrapper .cont .info-wrapper .btn:focus, .create-post-wrapper .cont .info-wrapper .btn:active {
+.create-events-btn:hover {
   background-color: #ddbfff;
 }
-.create-post-wrapper .cont .text-area {
+
+
+.create-post-wrapper .text-area {
   text-align: center;
 }
-.create-post-wrapper .cont .text-area textarea {
+.create-post-wrapper  textarea {
   margin: auto;
   padding: 20px 12px;
   resize: none;
@@ -66,46 +58,21 @@
   width: 100%;
   border: 1px solid #7E22FF;
 }
-.create-post-wrapper .cont .text-area textarea::placeholder {
+.create-post-wrapper .text-area textarea::placeholder {
   color: #b3b7bb;
 }
-.create-post-wrapper .cont .text-area textarea:focus, .create-post-wrapper .cont .text-area textarea:active {
+.create-post-wrapper textarea:hover {
   border: 2px solid #402366;
 }
-.create-post-wrapper .cont .flex-panel {
-  display: flex;
-  padding: 5px 0;
-}
-.create-post-wrapper .cont .flex-panel .tools {
-  display: flex;
-  flex: 1;
-  justify-content: flex-start;
-}
-.create-post-wrapper .cont .flex-panel .tools * {
-  margin-right: 25px;
-  color: #664F85;
-  cursor: pointer;
-}
-.create-post-wrapper .cont .flex-panel .btn {
-  border-radius: 0;
-  width: 200px;
-  padding-bottom: 15px;
-  padding-top: 15px;
-  display: block;
-  margin-left: 15px;
+
+.create-post-btn {
+  
   background-color: #402366;
   color: white;
-  font-size: 12px;
-  font-weight: 700;
-  text-align: center;
-  transition: background-color 0.3s linear;
+  
 }
-@media screen and (max-width: 600px) {
-  .create-post-wrapper .cont .flex-panel .btn {
-    margin-left: 0;
-  }
-}
-.create-post-wrapper .cont .flex-panel .btn:hover, .create-post-wrapper .cont .flex-panel .btn:focus, .create-post-wrapper .cont .flex-panel .btn:active {
+
+.create-post-btn:hover {
   background-color: #281640;
 }
 
