--- a/src/styles/DisplayEvent.css
+++ b/src/styles/DisplayEvent.css
@@ -1,60 +1,60 @@
-#event {
+.event {
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.3);
   padding: 0;
 }
 
-#event img {
+.event .imageTitle {
+  position: relative;
+}
+
+.event img {
   border-radius: 10px 10px 0 0;
   width: 100%;
 }
 
-#imageTitle {
-  position: relative;
-}
-
-#name {
+.event .name {
   position: absolute;
   bottom: 0;
   margin-bottom: 0;
-  padding: 10px;
-  padding-left: 30px;
+  padding: 1%;
+  padding-left: 4%;
   width: 100%;
   font-size: 30px;
   color: white;
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-hr {
+.event hr {
   border: 5px solid rgb(167, 166, 166);
   margin: 0;
 }
 
-#info, #rsvp {
-  padding: 40px;
+.event .info, .event .rsvp {
+  padding: 4% 7%;
 }
 
-#details p, #more {
-  color: rgb(81, 42, 133);
+.event .details p, .event .more {
+  color: indigo;
 }
 
-#details p.tag {
+.event .details p.tag {
   color: rgb(122, 43, 226);
 }
 
-#details p svg {
-  margin-right: 5px;
+.event .details p svg {
+  margin-right: 2%;
 }
 
-#more {
+.event .more {
   float: right;
   text-decoration: underline;
 }
 
-#button {
-  background-color: rgb(81, 42, 133);
+.event .button {
+  background-color: indigo;
   border: none;
   border-radius: 0;
-  padding: 10px 30px;
+  padding: 5% 10%;
 }
