--- a/src/styles/DisplayPost.css
+++ b/src/styles/DisplayPost.css
@@ -23,7 +23,7 @@
   color: gray;
 }
 
-.post img {
+.post .media img {
   width: 100%;
 }
 
@@ -67,5 +67,5 @@
 }
 
 .active {
-  color: indigo;
+  color: indigo !important;
 }
