--- a/src/styles/NavBarComponent.css
+++ b/src/styles/NavBarComponent.css
@@ -1,5 +1,41 @@
-i, Nav{
-    text-align: center;
-    width:100%;
+.nav{
+
+text-align: center;
+width:100%;
+}
+
+.Profile-Pic{
+
+border: 1px solid transparent;
+border-color: white;
+width: 50px;
+height: 50px;
+}
+
+.nav-left > :any-link {
+
+margin-left:0px;
+margin-right:0px;
+
+}
+
+.Navbar {
+
+background: #402366 0% 0% no-repeat padding-box;
+}
+
+.Logout-link{
+
+font: normal normal 300 20px/25px;
+letter-spacing: 0px;
+color: #FFFFFF;
+opacity: 1;
+}
+
+.logo{
+
+width: 150px;
+height: 50px;
+background-color: white;
 }
 
