--- a/src/styles/DisplayEvent.css
+++ b/src/styles/DisplayEvent.css
@@ -9,7 +9,7 @@
   position: relative;
 }
 
-.event img {
+.event .imageTitle img {
   border-radius: 10px 10px 0 0;
   width: 100%;
   height: 30vh;
