media position updates

--- a/src/styles/DisplayPost.css
+++ b/src/styles/DisplayPost.css
@@ -29,19 +29,19 @@
 }
 
 .post .media {
-  margin: 0;
+  margin: -2% -2.5% 2%;
 }
 
-.post .media .img-col {
-  padding: 0.5%;
+.post .media .media-col {
+  padding: 0 0.5% 0.5%;
 }
 
-.post .media .img-col img {
+.post .media .media-col img {
   width: 100%;
 }
 
-.post img, .post iframe {
-  margin: 1% 0;
+.post .media .media-col iframe {
+  width: 100%;
 }
 
 .post .stats {
