Created PhoneConfirm Component

--- a/src/styles/PhoneConfirm.css
+++ b/src/styles/PhoneConfirm.css
@@ -1,8 +1,29 @@
-#continue {
-  padding-right:70px;
-  padding-left:70px;
-} 
+InputGroup {
+  width: 515px;
+  height:72px;
+  margin-left:1128px;
+}
 
+img {
+ opacity:0.5;
+ height:619px;
+ width:764px;
+ margin-top:280px;
+ margin-left:277px;
+}
 Form {
-    margin-top:70px;
-  }
+  margin-bottom:80px;
+  margin-left:50px;
+  margin-top:357px;
+  margin-right:650px;
+}
+
+#continue {
+  padding-left:70px;
+  padding-right:70px;
+}
+
+Button {
+  background:purple;
+}
+
