--- a/src/styles/DisplayEvent.css
+++ b/src/styles/DisplayEvent.css
@@ -48,6 +48,7 @@
 
 .event .details .detail {
   padding: 1% 0;
+  font-weight: 800;
 }
 
 .event .details p {
@@ -66,6 +67,7 @@
 .event .more {
   margin-left: 1%;
   text-decoration: underline;
+  font-weight: 800;
 }
 
 .event .button {
