--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -1,7 +1,7 @@
-.nav-link{
+/* .nav-link{
     margin-left: 50px;
     font-size: large;
 }
 .navbar {
     background-color: cornflowerblue;
-}
+} */
